scroll-to-top-and-overflow-hidden-bug-solved

--- a/src/pages/posts/posts.module.scss
+++ b/src/pages/posts/posts.module.scss
@@ -1,29 +1,7 @@
-.searchBox {
-  width: 100%;
-  max-width: 1024px;
-
-  padding: 1.5rem 1.25rem 0 1.25rem;
-
-  margin: 0 auto;
-
-  transition: all ease-in-out;
-
-  h1 {
-    font-size: 1.6rem;
-    font-weight: bold;
-    font-family: "Manrope", sans-serif;
-    letter-spacing: 0.5px;
-    text-align: center;
-
-    margin-top: 1rem;
-
-    color: var(--gray-300);
-  }
-}
-
 .postsCard {
   width: 100%;
   max-width: 1240px;
+  height: 100%;
 
   margin: 2rem auto;
   padding: 0 1.25rem;
